# pyzsync

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: release.yml  test.yml
pyzsync/: __init__.py  __main__.py  pyzsync.pyi
src/: lib.rs
tests/: __init__.py  conftest.py  test_pyzsync.py  test_zsync.py
tests/data/: test.big.zsync  test.small.zsync  test.txt.zsync
