[package]
name = "pyzsync"
version = "1.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyzsync"
crate-type = ["cdylib"]

[dependencies]
arrayref = "0.3.9"
chrono = "0.4.44"
hex = "0.4.3"
log = "0.4.29"
pyo3 = { version = "0.28.3", features = ["chrono"] }
pyo3-log = "0.13.3"
sha1 = "0.11.0"
sha2 = "0.11.0"

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }

[features]
# We must make this feature optional to build binaries such as the profiling crate
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
