[tool.poetry]
name = "pyzsync"
version = "1.2.0"
description = "zsync for python"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = ["uib GmbH <info@uib.de>"]
authors = ["uib GmbH <info@uib.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
maturin = "^1.0"
pytest = "^7.3"
mypy = "^1.3"
ruff = "^0.0"
pytest-cov = "^4.1"
tan = "^23.3"
rangehttpserver = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py311']
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[tool.ruff]
line-length = 140
# As long as pylint is in use:
# Ignore F401 (imported but unused)
# Ignore E402 (Module level import not at top of file)
# Ignore F811 (Redefinition of unused)
ignore = ["F401", "E402", "F811"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "silent"

[tool.pylint.MASTER]
load-plugins = "pylint_pydantic"

[tool.pylint.BASIC]
no-docstring-rgx = ".*"

[tool.pylint.FORMAT]
indent-string = "\t"
max-line-length = 140
