[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyzsync"
version = "1.3.2"
description = "A Python module written in Rust that implements the zsync algorithm"
license = { text = "AGPL-3.0" }
authors = [{ name = "uib GmbH", email = "info@uib.de" }]
maintainers = [{ name = "uib GmbH", email = "info@uib.de" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
line-length = 140

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "silent"

[tool.ruff.format]
indent-style = "tab"

[project.optional-dependencies]
dev = [
	"maturin>=1.0",
	"mypy>=1.3",
	"pytest-cov>=5.0",
	"pytest>=8.3",
	"rangehttpserver>=1.3",
	"ruff>=0.6",
	"pip>=24.3.1",
]
