[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyzsync"
version = "1.5.4"
description = "A Python module written in Rust that implements the zsync algorithm"
license = "AGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.10"

[[project.authors]]
name = "uib GmbH"
email = "info@uib.de"

[[project.maintainers]]
name = "uib GmbH"
email = "info@uib.de"

[tool.ruff]
line-length = 140

[tool.ruff.format]
indent-style = "tab"

[dependency-groups]
dev = [
	"maturin>=1.13",
	"pip>=26.1",
	"pytest-cov>=7.1",
	"pytest>=9.0",
	"rangehttpserver>=1.4",
	"ruff>=0.15",
	"ty>=0.0.32",
]
